enum TextEntryType {
  Name = 'name',
  Email = 'email',
  Password = 'password',
  Hospital = 'hospital',
  Empty = 'empty',
}
export { TextEntryType};