...
          <View style={buttonContainerstyle}> 
            <TouchableOpacity 
              style={buttonStyle} 
              onPress={() => Actions.register()}
            >
              <Text style={[buttonTextStyle, {color: "#fff"}]}>
                  GET STARTED
              </Text>
            </TouchableOpacity>
          </View>
        </View>
      </SafeAreaView>
    );
...
