...
                  paddingLeft: scale(40),
                  paddingRight: scale(40)
                }}>
                    <CardSection>
                      <IconInput
                        icon={RegularIcons.envelopeO}
                        placeholder="Email address"
                        onChangeText={this.onMailChangeText.bind(this)}
                        keyboardType="email-address"
                        returnKeyType={ "next" }
                      />
                    </CardSection>
                </View>
...
